// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots molecules/Select Custom valueComponent 1`] = `
.c0 {
  padding: 12px;
}

.c6 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c23 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c29 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c30 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c31 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c32 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c33 .c19 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c34 .c19 {
  font-size: 1.5em;
}

.c35 .c19 {
  font-size: 1.5em;
}

.c36 .c19 {
  font-size: 1.5em;
}

.c37 .c19 {
  font-size: 1.5em;
}

.c38 .c19 {
  font-size: 1.5em;
}

.c39 .c19 {
  font-size: 1.5em;
}

.c40 .c19 {
  font-size: 1.5em;
}

.c41 .c19 {
  font-size: 1.5em;
}

.c42 .c19 {
  font-size: 1.5em;
}

.c43 .c19 {
  font-size: 1.5em;
}

.c44 .c19 {
  font-size: 1.5em;
}

.c45 .c19 {
  font-size: 1.5em;
}

.c46 .c19 {
  font-size: 1.5em;
}

.c47 .c19 {
  font-size: 1.5em;
}

.c48 .c19 {
  font-size: 1.5em;
}

.c49 .c19 {
  font-size: 1.5em;
}

.c50 .c19 {
  font-size: 1.5em;
}

.c51 .c19 {
  font-size: 1.5em;
}

.c3 {
  display: block;
}

.c2 {
  position: relative;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c52 .c19 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c53 .c19 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c54 .c19 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c7 {
  height: 100%;
  width: 100%;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c9:hover,
.c9:focus {
  background-color: #eee;
}

.c10 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c18 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c18:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c18:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c18::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c18::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c18:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c18::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c18[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c4:hover {
  border: 1px solid #999;
}

.c4:focus {
  border: 1px solid #222;
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c22 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c22:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c22:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c22::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c22::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c22:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c22::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c22[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c21 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c21:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c21:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c21::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c21::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c21:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c21::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c21[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c12 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c12:hover {
  border: 1px solid #999;
}

.c12:focus {
  border: 1px solid #222;
}

.c12::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c14 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #4caf50;
  background-color: unset;
}

.c14:hover {
  border: 1px solid #999;
}

.c14:focus {
  border: 1px solid #222;
}

.c14::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c13 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #ef5350;
  background-color: unset;
}

.c13:hover {
  border: 1px solid #999;
}

.c13:focus {
  border: 1px solid #222;
}

.c13::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c15 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 .c19 {
  pointer-events: none;
}

.c17 {
  padding-right: 2.2em;
}

.c20 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: NaNpx;
  cursor: not-allowed;
  right: 0.5em;
}

.c20 svg {
  vertical-align: middle;
}

.c16[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c8 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c4"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <div
          className="c5"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c12"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <div
          className="c5"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c13"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <div
          className="c5"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <input
          className="c14"
          onChange={[Function]}
          onClick={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <div
          className="c5"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c15"
          onClick={[Function]}
        >
          <input
            className="c16 c17 c18"
            disabled={true}
            onChange={[Function]}
            placeholder="Choose option"
            type="text"
            value={null}
          />
          <span
            className="c19 c20"
            disabled={true}
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </div>
        <div
          className="c5"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c15"
          onClick={[Function]}
        >
          <input
            className="c16 c17 c18"
            disabled={true}
            onChange={[Function]}
            placeholder="Choose option"
            type="text"
            value={null}
          />
          <span
            className="c19 c20"
            disabled={true}
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </div>
        <div
          className="c5"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c15"
          onClick={[Function]}
        >
          <input
            className="c16 c17 c21"
            disabled={true}
            onChange={[Function]}
            placeholder="Choose option"
            type="text"
            value={null}
          />
          <span
            className="c19 c20"
            disabled={true}
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </div>
        <div
          className="c5"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c2"
      data-test="dropdown"
    >
      <div
        className="c3"
      >
        <div
          className="c15"
          onClick={[Function]}
        >
          <input
            className="c16 c17 c22"
            disabled={true}
            onChange={[Function]}
            placeholder="Choose option"
            type="text"
            value={null}
          />
          <span
            className="c19 c20"
            disabled={true}
          >
            <svg
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
              />
            </svg>
          </span>
        </div>
        <div
          className="c5"
          data-test="dropdown-content"
          open={false}
        >
          <div
            className="c6"
          >
            <div
              className="c7"
              onKeyDown={[Function]}
            >
              <div
                className="c8"
                onScroll={[Function]}
                style={
                  Object {
                    "WebkitOverflowScrolling": "touch",
                    "direction": "ltr",
                    "height": 120,
                    "overflow": "auto",
                    "position": "relative",
                    "width": "100%",
                    "willChange": "transform",
                  }
                }
              >
                <ul
                  style={
                    Object {
                      "height": 120,
                      "pointerEvents": "",
                      "width": "100%",
                    }
                  }
                >
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        one
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 30,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        two
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 60,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        three
                      </div>
                    </div>
                  </li>
                  <li
                    className="c9"
                    onClick={[Function]}
                    onMouseOver={[Function]}
                    style={
                      Object {
                        "height": 30,
                        "left": 0,
                        "position": "absolute",
                        "top": 90,
                        "width": "100%",
                      }
                    }
                    tabIndex={-1}
                  >
                    <div
                      className="c10"
                    >
                      <div
                        className="c11"
                      >
                        four
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select default 1`] = `
.c0 {
  padding: 12px;
}

.c10 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c16 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c7 {
  font-size: 1.5em;
}

.c28 .c7 {
  font-size: 1.5em;
}

.c29 .c7 {
  font-size: 1.5em;
}

.c30 .c7 {
  font-size: 1.5em;
}

.c31 .c7 {
  font-size: 1.5em;
}

.c32 .c7 {
  font-size: 1.5em;
}

.c33 .c7 {
  font-size: 1.5em;
}

.c34 .c7 {
  font-size: 1.5em;
}

.c35 .c7 {
  font-size: 1.5em;
}

.c36 .c7 {
  font-size: 1.5em;
}

.c37 .c7 {
  font-size: 1.5em;
}

.c38 .c7 {
  font-size: 1.5em;
}

.c39 .c7 {
  font-size: 1.5em;
}

.c40 .c7 {
  font-size: 1.5em;
}

.c41 .c7 {
  font-size: 1.5em;
}

.c42 .c7 {
  font-size: 1.5em;
}

.c43 .c7 {
  font-size: 1.5em;
}

.c44 .c7 {
  font-size: 1.5em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c9 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c45 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c46 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c47 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c11 {
  height: 100%;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c13:hover,
.c13:focus {
  background-color: #eee;
}

.c14 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c7 {
  pointer-events: none;
}

.c5 {
  padding-right: 2.2em;
}

.c8 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: NaNpx;
  cursor: not-allowed;
  right: 0.5em;
}

.c8 svg {
  vertical-align: middle;
}

.c4[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c12 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        <input
          className="c4 c5 c6"
          disabled={true}
          onChange={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <span
          className="c7 c8"
          disabled={true}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c9"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c10"
        >
          <div
            className="c11"
            onKeyDown={[Function]}
          >
            <div
              className="c12"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 120,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 120,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      one
                    </div>
                  </div>
                </li>
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 30,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      two
                    </div>
                  </div>
                </li>
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 60,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      three
                    </div>
                  </div>
                </li>
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 90,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      four
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select onOutsideClick (dropdown) 1`] = `
.c0 {
  padding: 12px;
}

.c10 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c16 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c7 {
  font-size: 1.5em;
}

.c28 .c7 {
  font-size: 1.5em;
}

.c29 .c7 {
  font-size: 1.5em;
}

.c30 .c7 {
  font-size: 1.5em;
}

.c31 .c7 {
  font-size: 1.5em;
}

.c32 .c7 {
  font-size: 1.5em;
}

.c33 .c7 {
  font-size: 1.5em;
}

.c34 .c7 {
  font-size: 1.5em;
}

.c35 .c7 {
  font-size: 1.5em;
}

.c36 .c7 {
  font-size: 1.5em;
}

.c37 .c7 {
  font-size: 1.5em;
}

.c38 .c7 {
  font-size: 1.5em;
}

.c39 .c7 {
  font-size: 1.5em;
}

.c40 .c7 {
  font-size: 1.5em;
}

.c41 .c7 {
  font-size: 1.5em;
}

.c42 .c7 {
  font-size: 1.5em;
}

.c43 .c7 {
  font-size: 1.5em;
}

.c44 .c7 {
  font-size: 1.5em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c9 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c45 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c46 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c47 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c11 {
  height: 100%;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c13:hover,
.c13:focus {
  background-color: #eee;
}

.c14 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c7 {
  pointer-events: none;
}

.c5 {
  padding-right: 2.2em;
}

.c8 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: NaNpx;
  cursor: not-allowed;
  right: 0.5em;
}

.c8 svg {
  vertical-align: middle;
}

.c4[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c12 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        <input
          className="c4 c5 c6"
          disabled={true}
          onChange={[Function]}
          placeholder="Click on me or outside"
          type="text"
          value={null}
        />
        <span
          className="c7 c8"
          disabled={true}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c9"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c10"
        >
          <div
            className="c11"
            onKeyDown={[Function]}
          >
            <div
              className="c12"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 30,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 30,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      click outside
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots molecules/Select useTriggerComponentWidth = false 1`] = `
.c0 {
  padding: 12px;
}

.c10 {
  padding-top: 1.25em;
  padding-bottom: 1.25em;
}

.c16 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c7 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c7 {
  font-size: 1.5em;
}

.c28 .c7 {
  font-size: 1.5em;
}

.c29 .c7 {
  font-size: 1.5em;
}

.c30 .c7 {
  font-size: 1.5em;
}

.c31 .c7 {
  font-size: 1.5em;
}

.c32 .c7 {
  font-size: 1.5em;
}

.c33 .c7 {
  font-size: 1.5em;
}

.c34 .c7 {
  font-size: 1.5em;
}

.c35 .c7 {
  font-size: 1.5em;
}

.c36 .c7 {
  font-size: 1.5em;
}

.c37 .c7 {
  font-size: 1.5em;
}

.c38 .c7 {
  font-size: 1.5em;
}

.c39 .c7 {
  font-size: 1.5em;
}

.c40 .c7 {
  font-size: 1.5em;
}

.c41 .c7 {
  font-size: 1.5em;
}

.c42 .c7 {
  font-size: 1.5em;
}

.c43 .c7 {
  font-size: 1.5em;
}

.c44 .c7 {
  font-size: 1.5em;
}

.c2 {
  display: block;
}

.c1 {
  position: relative;
  width: 100%;
}

.c9 {
  box-sizing: border-box;
  position: absolute;
  background-color: #f9f9f9;
  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
  z-index: 1;
  min-width: 160px;
  visibility: hidden;
}

.c45 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c46 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c47 .c7 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c11 {
  height: 100%;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: 'Fira Sans',sans-serif;
  font-weight: 500;
  font-size: 0.875em;
  outline: none;
  cursor: pointer;
}

.c13:hover,
.c13:focus {
  background-color: #eee;
}

.c14 {
  width: 100%;
  height: 100%;
  padding: 0 20px;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.c6 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c6:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c6:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c6::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c6[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c7 {
  pointer-events: none;
}

.c5 {
  padding-right: 2.2em;
}

.c8 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: NaNpx;
  cursor: not-allowed;
  right: 0.5em;
}

.c8 svg {
  vertical-align: middle;
}

.c4[disabled] {
  cursor: pointer;
  box-shadow: none;
}

.c12 ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="dropdown"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
        onClick={[Function]}
      >
        <input
          className="c4 c5 c6"
          disabled={true}
          onChange={[Function]}
          placeholder="Choose option"
          type="text"
          value={null}
        />
        <span
          className="c7 c8"
          disabled={true}
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c9"
        data-test="dropdown-content"
        open={false}
      >
        <div
          className="c10"
        >
          <div
            className="c11"
            onKeyDown={[Function]}
          >
            <div
              className="c12"
              onScroll={[Function]}
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "direction": "ltr",
                  "height": 120,
                  "overflow": "auto",
                  "position": "relative",
                  "width": "100%",
                  "willChange": "transform",
                }
              }
            >
              <ul
                style={
                  Object {
                    "height": 120,
                    "pointerEvents": "",
                    "width": "100%",
                  }
                }
              >
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 0,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      one
                    </div>
                  </div>
                </li>
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 30,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      two
                    </div>
                  </div>
                </li>
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 60,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      three
                    </div>
                  </div>
                </li>
                <li
                  className="c13"
                  onClick={[Function]}
                  onMouseOver={[Function]}
                  style={
                    Object {
                      "height": 30,
                      "left": 0,
                      "position": "absolute",
                      "top": 90,
                      "width": "100%",
                    }
                  }
                  tabIndex={-1}
                >
                  <div
                    className="c14"
                  >
                    <div
                      className="c15"
                    >
                      four
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
